FIXED MINOR TEXT INFO

--- a/Index.html
+++ b/Index.html
@@ -213,7 +213,7 @@
 
 <div class="jumbotron text-center">
   <h1>Dwiddder</h1> 
-  <p>Where in the world is Dr. Fu? </p> 
+  <p>Where in the world is Dr. Evil? </p> 
   </div>
 
 <!-- Container (About Section) -->
@@ -222,7 +222,7 @@
     <div class="col-sm-8">
       <h2>How can you help?</h2><br>
       <h4>Do you know where Dr. Evil is? </h4><br>
-      <p>Enter your information in the form below to get tell us where Dr. Evil is.</p>
+      <p>Enter your information in the form below to get tell us where in the world Dr. Evil is.</p>
           </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo"></span>
