completed all functions

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ $('#newReportForm').submit(ajaxSubmit);
 	alert(array);
       }
     });
-    window.location.replace("/list.php");
+    // window.location.replace("/list.php");
     return false;
   }
 </script>
